--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.ts",
+    "build": "tsc",
+    "add-build": "git add dist",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run foo && npm run bar && npm run test"
+    }
   },
   "author": "",
   "license": "ISC",
